fixed the horizontal scrolling of the avatars

--- a/src/components/GroupMembers.css
+++ b/src/components/GroupMembers.css
@@ -38,3 +38,28 @@
   font-weight: bold;
   color: #093d44;
 }
+
+.community-checkins {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: space-evenly;
+  align-items: center;
+  /* overflow-x: auto; */
+  padding-bottom: 10px;
+  width: 100%;
+}
+
+
+.community-checkins .user-checkin {
+  display: flex;
+  flex-direction: column;
+  max-width: 20px;
+}
+.community-checkins .user-checkin img {
+  width: 30px;
+  height: 30px;
+  background-color: #f7c890;
+  border-radius: 50%;
+  object-fit: cover;
+}
