--- a/src/pages/DailyLift.css
+++ b/src/pages/DailyLift.css
@@ -65,30 +65,6 @@
   box-shadow: 0 0 0 3px rgba(241, 168, 77, 0.2);
 }
 
-.community-checkins {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
-  justify-content: space-around;
-  align-items: center;
-  overflow-x: auto;
-  padding-bottom: 10px;
-  width: 100%;
-}
-
-.community-checkins .user-checkin {
-  display: flex;
-  flex-direction: column;
-  max-width: 20px;
-}
-.community-checkins .user-checkin img {
-  width: 30px;
-  height: 30px;
-  background-color: #f7c890;
-  border-radius: 50%;
-  object-fit: cover;
-}
-
 .encourage {
   color: #093d44;
   text-align: center;
